--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -3,28 +3,27 @@
 {% block title %}Welcome!{% endblock %}
 
 {% block content %}
-    <div class="container">
-        <div class="row align-items-start text-center">
-            <div class="col-sm-12 col-md-4 border">
-                awake time
+    <div class="card-group">
+    {% for child in objects %}
+        <div class="card">
+            <img class="card-img-top" style="height: 180px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22259%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20259%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_15e152b1929%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_15e152b1929%22%3E%3Crect%20width%3D%22259%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2296.26666641235352%22%20y%3D%2296%22%3E259x180%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+            <div class="card-body">
+                <h4 class="card-title">
+                    {{ child.name }}
+                    <small class="text-muted">{{ child.birth_date }}</small>
+                </h4>
+                <p class="card-text">
+                    {% if perms.core.view_child %}
+                        <a href="{% url 'dashboard-child' child.slug %}" class="btn btn-success">
+                            <i class="fa fa-tachometer" aria-hidden="true"></i>
+                        </a>
+                    {% endif %}
+                </p>
             </div>
-            <div class="col-sm-12 col-md-4 border">
-                last feeding
-            </div>
-            <div class="col-sm-12 col-md-4 border">
-                change statistics
-            </div>
-        </div>
-        <div class="row align-items-start text-center">
-            <div class="col-sm-12 col-md-4 border">
-                tummy time for the day
-            </div>
-            <div class="col-sm-12 col-md-4 border">
-                available
-            </div>
-            <div class="col-sm-12 col-md-4 border">
-                available
+            <div class="card-footer">
+                <small class="text-muted">...</small>
             </div>
         </div>
+    {% endfor %}
     </div>
 {% endblock %}
