Fix gulp styles:app task for static_src folder name change.

--- a/babyblotter/static_src/scss/babyblotter.scss
+++ b/babyblotter/static_src/scss/babyblotter.scss
@@ -4,4 +4,4 @@
 @import 'global';
 @import '../../../node_modules/bootstrap/scss/bootstrap';
 
-@import '../../../**/static/scss/*';
+@import '../../../**/static_src/scss/*';
