--- a/reports/templates/reports/diaperchange.html
+++ b/reports/templates/reports/diaperchange.html
@@ -3,11 +3,11 @@
 {% block title %}Diaper Change Report - {{ object }}{% endblock %}
 
 {% block content %}
-    <div>
-        Diaper change report for {{ object }}.
+    <div class="jumbotron jumbotron-fluid text-center">
+        <h1 class="display-3">Diaper Change Reports</h1>
+        <h2 class="text-muted">{{ object }}</h2>
     </div>
-
-    <div style="min-height: 600px;">
+    <div class="container-fluid">
         {{ html|safe }}
     </div>
 
