Add Reports menu to child dashboard.

--- a/dashboard/templates/cards/diaperchange_types.html
+++ b/dashboard/templates/cards/diaperchange_types.html
@@ -1,6 +1,6 @@
 {% extends 'cards/diaperchange.html' %}
 
-{% block header %}Diaper Changes{% endblock %}
+{% block header %}Diaper Change Types{% endblock %}
 
 {% block title %}
     <strong>Past Week</strong>
