--- a/reports/templates/reports/sleep.html
+++ b/reports/templates/reports/sleep.html
@@ -1,12 +1,19 @@
 {% extends 'reports/report_base.html' %}
 
-{% block title %}Sleep Report - {{ object }}{% endblock %}
+{% block title %}Sleep Reports - {{ object }}{% endblock %}
 
 {% block content %}
-    <div>
-        Sleep report for {{ object }}.
+    <div class="jumbotron jumbotron-fluid text-center">
+        <h1 class="display-3">Sleep Reports</h1>
+        <h2 class="text-muted">{{ object }}</h2>
+    </div>
+    <div class="container-fluid">
+        {{ html|safe }}
     </div>
 
-    Test
+{% endblock %}
 
+{% block javascript %}
+    {{ block.super }}
+    {{ javascript|safe }}
 {% endblock %}
