--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -32,19 +32,20 @@
         <div class="col-lg-4 col-sm-12">
             <div class="row">
                 <div class="col-lg-12 col-sm-6">
-                    {% card_diaperchange_last object %}
                     {% card_feeding_last object %}
+                    {% card_feeding_last_method object %}
                 </div>
                 <div class="col-lg-12 col-sm-6">
-                    {% card_tummytime_last object %}
                     {% card_sleep_last object %}
                 </div>
             </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
+            {% card_tummytime_last object %}
             {% card_tummytime_day object %}
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
+            {% card_diaperchange_last object %}
             {% card_diaperchange_types object %}
         </div>
     </div>
