Include seconds in Tummy Time entry form fields.

--- a/core/templates/core/tummytime_form.html
+++ b/core/templates/core/tummytime_form.html
@@ -42,11 +42,11 @@
     <script type="text/javascript">
         $(function () {
             $('#id_start').datetimepicker({
-                format: 'YYYY-MM-DD HH:mm',
+                format: 'YYYY-MM-DD HH:mm:ss',
                 useCurrent: false
             });
             $('#id_end').datetimepicker({
-                format: 'YYYY-MM-DD HH:mm'
+                format: 'YYYY-MM-DD HH:mm:ss'
             });
         });
     </script>
