--- a/core/templates/core/timer_nav.html
+++ b/core/templates/core/timer_nav.html
@@ -8,13 +8,20 @@
     <div class="dropdown-menu" aria-labelledby="nav-timer-menu-link">
         {% if perms.core.add_timer %}
             <a class="dropdown-item" href="{% url 'timer-add-quick' %}">
-                <i class="fa fa-plus" aria-hidden="true"></i> Create Timer
+                <i class="fa fa-clock-o" aria-hidden="true"></i> Quick Start Timer
             </a>
-            {% if timers %}
-                <div class="dropdown-divider"></div>
-            {% endif %}
+            <a class="dropdown-item" href="{% url 'timer-add' %}">
+                <i class="fa fa-plus" aria-hidden="true"></i> Start Timer
+            </a>
+        {% endif %}
+        {% if perms.core.view_timer %}
+            <a class="dropdown-item" href="{% url 'timer-list' %}">
+                <i class="fa fa-list" aria-hidden="true"></i> View Timers
+            </a>
         {% endif %}
         {% for timer in timers %}
+            <div class="dropdown-divider"></div>
+            <h6 class="dropdown-header">Active Timers</h6>
             <a class="dropdown-item" href="{% url 'timer-detail' timer.id %}">{{ timer }}</a>
         {% endfor %}
     </div>
