Add a timer edit flow.

--- a/core/templates/core/timer_form.html
+++ b/core/templates/core/timer_form.html
@@ -28,7 +28,7 @@
                 {% endif %}
             </div>
         {% endfor %}
-        <button type="submit" class="btn btn-success">Start Timer</button>
+        <button type="submit" class="btn btn-success">Submit</button>
         <a href="{% url 'timer-list' %}" class="btn btn-default">Cancel</a>
     </form>
 {% endblock %}
