--- a/core/templates/core/timer_detail.html
+++ b/core/templates/core/timer_detail.html
@@ -19,7 +19,7 @@
             {% endif %}
         </p>
         <p class="text-muted">
-            Created by {{ object.user }}
+            {{ timer }} created by {{ object.user }}
         </p>
 
         {% if perms.core.add_feeding %}
@@ -49,7 +49,11 @@
             {% endif %}
 
             {% if perms.core.change_timer %}
-                <a class="btn btn-secondary"
+                <a class="btn btn-primary"
+                   href="{% url 'timer-update' timer.id %}"
+                   role="button"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+
+                <a class="btn btn-dark"
                    href="{% url 'timer-restart' timer.id %}"
                    role="button"><i class="fa fa-refresh" aria-hidden="true"></i></a>
 
