--- a/core/templates/core/feeding_list.html
+++ b/core/templates/core/feeding_list.html
@@ -57,6 +57,8 @@
                 {% endfor %}
             </tbody>
         </table>
+
+        {% include 'babyblotter/paginator.html' %}
     </div>
 
     {% if perms.core.add_feeding %}
