--- a/core/templates/core/timer_list.html
+++ b/core/templates/core/timer_list.html
@@ -36,5 +36,7 @@
             {% endfor %}
             </tbody>
         </table>
+
+        {% include 'babyblotter/paginator.html' %}
     </div>
 {% endblock %}
