--- a/core/templates/core/note_list.html
+++ b/core/templates/core/note_list.html
@@ -46,6 +46,8 @@
                 {% endfor %}
             </tbody>
         </table>
+
+        {% include 'babyblotter/paginator.html' %}
     </div>
 
     {% if perms.core.add_note %}
