Add a total sleep on date card.

--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -35,6 +35,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
             {% card_sleep_last object %}
+            {% card_sleep_day object %}
             {% card_tummytime_day object %}
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
