Further standardize report templates.

--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -17,12 +17,12 @@
                     aria-expanded="false"><i class="fa fa-bar-chart" aria-hidden="true"></i> Reports</button>
             <div class="dropdown-menu" aria-labelledby="reports-dropdown">
                 {% if perms.core.view_diaperchange %}
-                    <a class="dropdown-item" href="{% url 'reports:report-diaperchange-child' object.slug %}">
-                        <i class="fa fa-trash" aria-hidden="true"></i> Changes</a>
+                    <h6 class="dropdown-header"><i class="fa fa-trash" aria-hidden="true"></i> Diaper Changes</h6>
+                    <a class="dropdown-item" href="{% url 'reports:report-diaperchange-child' object.slug %}">Change Types</a>
                 {% endif %}
-            {% if perms.core.view_sleep %}
-                    <a class="dropdown-item" href="{% url 'reports:report-sleep-child' object.slug %}">
-                        <i class="fa fa-bed" aria-hidden="true"></i> Sleep</a>
+                {% if perms.core.view_sleep %}
+                    <h6 class="dropdown-header"><i class="fa fa-bed" aria-hidden="true"></i> Sleep</h6>
+                    <a class="dropdown-item" href="{% url 'reports:report-sleep-child' object.slug %}">Sleep Patterns</a>
                 {% endif %}
             </div>
         </div>
