--- a/reports/templates/reports/diaperchange.html
+++ b/reports/templates/reports/diaperchange.html
@@ -1,17 +1,6 @@
 {% extends 'reports/report_base.html' %}
 
-{% block title %}Diaper Change Report - {{ object }}{% endblock %}
-
-{% block content %}
-    <div class="jumbotron jumbotron-fluid text-center">
-        <h1 class="display-3">Diaper Change Reports</h1>
-        <h2 class="text-muted">{{ object }}</h2>
-    </div>
-    <div class="container-fluid">
-        {{ html|safe }}
-    </div>
-
-{% endblock %}
+{% block title %}Diaper Change Types - {{ object }}{% endblock %}
 
 {% block javascript %}
     {{ block.super }}
