--- a/reports/templates/reports/report_base.html
+++ b/reports/templates/reports/report_base.html
@@ -1,6 +1,14 @@
 {% extends 'babyblotter/page.html' %}
 {% load static %}
 
+{% block title %}{% endblock %}
+
+{% block content %}
+    <div class="container-fluid">
+        {{ html|safe }}
+    </div>
+{% endblock %}
+
 {% block javascript %}
     {% if debug %}
         <script src="{% static "babyblotter/js/graph.js" %}"></script>
